with bing news setup

--- a/COVID-news/NLP COVID News Media.ipynb
+++ b/COVID-news/NLP COVID News Media.ipynb
@@ -48,54 +48,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##This is python code that I found for using RAPIDAPI. Still need help to find API for it. \n",
-    "\n",
-    "import requests  # install from: http://docs.python-requests.org/en/master/\n",
-    "\n",
-    "# Replace the following string value with your valid X-RapidAPI-Key.\n",
-    "Your_X_RapidAPI_Key = \"XXXXXXXXXXXXXXXXXXX\";\n",
-    "\n",
-    "# The query parameters: (update according to your search query)\n",
-    "q = \"Taylor%20Swift\"  # the search query\n",
-    "pageNumber = 1  # the number of requested page\n",
-    "pageSize = 10  # the size of a page\n",
-    "autoCorrect = True  # autoCorrectspelling\n",
-    "safeSearch = False  # filter results for adult content\n",
-    "\n",
-    "response = requests.get(\n",
-    "    \"https://contextualwebsearch-websearch-v1.p.rapidapi.com/api/Search/NewsSearchAPI?q={}&pageNumber={}&pageSize={}&autocorrect={}&safeSearch={}\".format(\n",
-    "        q, pageNumber, pageSize, autoCorrect, safeSearch),\n",
-    "    headers={\n",
-    "        \"X-RapidAPI-Key\": Your_X_RapidAPI_Key\n",
-    "    }\n",
-    ").json()\n",
-    "\n",
-    "# Get the numer of items returned\n",
-    "totalCount = response[\"totalCount\"];\n",
-    "\n",
-    "# Get the list of most frequent searches related to the input search query\n",
-    "relatedSearch = response[\"relatedSearch\"]\n",
-    "\n",
-    "# Go over each resulting item\n",
-    "for webPage in response[\"value\"]:\n",
-    "    # Get the web page metadata\n",
-    "    url = webPage[\"url\"]\n",
-    "    title = webPage[\"title\"]\n",
-    "    description = webPage[\"description\"]\n",
-    "    keywords = webPage[\"keywords\"]\n",
-    "    provider = webPage[\"provider\"][\"name\"]\n",
-    "    datePublished = webPage[\"datePublished\"]\n",
-    "\n",
-    "    # Get the web page image (if exists)\n",
-    "    imageUrl = webPage[\"image\"][\"url\"]\n",
-    "    imageHeight = webPage[\"image\"][\"height\"]\n",
-    "    imageWidth = webPage[\"image\"][\"width\"]\n",
-    "\n",
-    "    thumbnail = webPage[\"image\"][\"thumbnail\"]\n",
-    "    thumbnailHeight = webPage[\"image\"][\"thumbna`enter code here`ilHeight\"]\n",
-    "\n",
-    "# An example: Output the webpage url, title and published date:\n",
-    "print(\"Url: %s. Title: %s. Published Date:%s.\" % (url, title, datePublished))"
+    "subscription_key = \"your subscription key\"\n",
+    "search_term = \"Microsoft\"\n",
+    "search_url = \"https://api.cognitive.microsoft.com/bing/v7.0/news/search\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headers = {\"Ocp-Apim-Subscription-Key\" : subscription_key}\n",
+    "params  = {\"q\": search_term, \"textDecorations\": True, \"textFormat\": \"HTML\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.get(search_url, headers=headers, params=params)\n",
+    "response.raise_for_status()\n",
+    "search_results = response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "descriptions = [article[\"description\"] for article in search_results[\"value\"]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import HTML\n",
+    "rows = \"\\n\".join([\"<tr><td>{0}</td></tr>\".format(desc)\n",
+    "                  for desc in descriptions])\n",
+    "HTML(\"<table>\"+rows+\"</table>\")\n"
    ]
   },
   {
