--- a/COVID-news/NLP_clean.ipynb
+++ b/COVID-news/NLP_clean.ipynb
@@ -45,6 +45,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (<ipython-input-84-75f972ee3c46>, line 44)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-84-75f972ee3c46>\"\u001b[0;36m, line \u001b[0;32m44\u001b[0m\n\u001b[0;31m    print(\"Url: %s. Title: %s. Published Date:%s.\" % (url, title, datePublished))\";\u001b[0m\n\u001b[0m                                                                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Replace the following string value with your valid X-RapidAPI-Key.\n",
+    "Your_X_RapidAPI_Key = \"b9297b332bmshd145b94c59505f0p1a438cjsn3dc7ab324c32\";\n",
+    "\n",
+    "# The query parameters: (update according to your search query)\n",
+    "q = \"Coronavirus\"  # the search query\n",
+    "pageNumber = 1  # the number of requested page\n",
+    "pageSize = 10  # the size of a page\n",
+    "autoCorrect = True  # autoCorrectspelling\n",
+    "safeSearch = False  # filter results for adult content\n",
+    "\n",
+    "response = requests.get(\n",
+    "    \"https://contextualwebsearch-websearch-v1.p.rapidapi.com/api/Search/NewsSearchAPI?q={}&pageNumber={}&pageSize={}&autocorrect={}&safeSearch={}\".format(\n",
+    "        q, pageNumber, pageSize, autoCorrect, safeSearch),\n",
+    "    headers={\n",
+    "        \"X-RapidAPI-Key\": 'b9297b332bmshd145b94c59505f0p1a438cjsn3dc7ab324c32'\n",
+    "    }\n",
+    ").json()\n",
+    "\n",
+    "# Get the numer of items returned\n",
+    "totalCount = response[\"totalCount\"];\n",
+    "\n",
+    "# Get the list of most frequent searches related to the input search query\n",
+    "relatedSearch = response[\"relatedSearch\"]\n",
+    "\n",
+    "# Go over each resulting item\n",
+    "for webPage in response[\"value\"]:\n",
+    "    # Get the web page metadata\n",
+    "    url = webPage[\"url\"]\n",
+    "    title = webPage[\"title\"]\n",
+    "    description = webPage[\"description\"]\n",
+    "    keywords = webPage[\"keywords\"]\n",
+    "    provider = webPage[\"provider\"][\"name\"]\n",
+    "    datePublished = webPage[\"datePublished\"]\n",
+    "\n",
+    "    # Get the web page image (if exists)\n",
+    "    imageUrl = webPage[\"image\"][\"url\"]\n",
+    "    imageHeight = webPage[\"image\"][\"height\"]\n",
+    "    imageWidth = webPage[\"image\"][\"width\"]\n",
+    "\n",
+    "    thumbnail = webPage[\"image\"][\"thumbnail\"]\n",
+    "    thumbnailHeight = webPage[\"image\"][\"thumbna`enter code here`ilHeight\"]\n",
+    "\n",
+    "# An example: Output the webpage url, title and published date:\n",
+    "print(\"Url: %s. Title: %s. Published Date:%s.\" % (url, title, datePublished))\";\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [],
@@ -507,7 +569,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "source_list=[]\n",
+    "for data in all_articles['articles']:\n",
+    "    source=data['source']\n",
+    "    source_list.append(source)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "date_list=[]\n",
+    "for data in all_articles['articles']:\n",
+    "    date=data['publishedAt']\n",
+    "    date_list.append(Date)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "title_list=[]\n",
+    "for date in all_articles['articles']:\n",
+    "    title=data['title']\n",
+    "    title_list.append(title)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "urls_list=[]\n",
+    "for data in all_articles['articles']:\n",
+    "    url=data['url']\n",
+    "    urls_list.append(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "key_words_list=[]\n",
+    "for data in all_articles['articles']:\n",
+    "    art = Article(url=data['url'])\n",
+    "    art.download()\n",
+    "    art.parse()\n",
+    "    art.nlp()\n",
+    "    key_words_list.append(art.keywords)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_list=[]\n",
+    "for data in all_articles['articles']:\n",
+    "    art = Article(url=data['url'])\n",
+    "    art.download()\n",
+    "    art.parse()\n",
+    "    art.nlp()\n",
+    "    text_list.append(art.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -535,6 +675,8 @@
        "      <th>Date</th>\n",
        "      <th>Title</th>\n",
        "      <th>URL</th>\n",
+       "      <th>Keywords</th>\n",
+       "      <th>Text</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -543,53 +685,192 @@
        "      <td>{'id': 'msnbc', 'name': 'MSNBC'}</td>\n",
        "      <td>2020-03-23T20:44:17Z</td>\n",
        "      <td>Democrats hold coronavirus stimulus over trans...</td>\n",
+       "      <td>https://www.msnbc.com/mtp-daily/watch/trump-co...</td>\n",
+       "      <td>[conducted, coronavirus, governors, cuomo, for...</td>\n",
+       "      <td>Cuomo: Governors are in charge because Trump p...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>{'id': 'msnbc', 'name': 'MSNBC'}</td>\n",
+       "      <td>2020-03-23T20:44:17Z</td>\n",
+       "      <td>Democrats hold coronavirus stimulus over trans...</td>\n",
+       "      <td>https://www.msnbc.com/msnbc/watch/quarantined-...</td>\n",
+       "      <td>[coronavirus, decision, miami, pandemic, hold,...</td>\n",
+       "      <td>Miami mayor Francis Suarez, who has tested pos...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>{'id': 'msnbc', 'name': 'MSNBC'}</td>\n",
+       "      <td>2020-03-23T20:44:17Z</td>\n",
+       "      <td>Democrats hold coronavirus stimulus over trans...</td>\n",
+       "      <td>https://www.msnbc.com/stephanie-ruhle/watch/re...</td>\n",
+       "      <td>[coronavirus, ruhle, ross, weighing, reeling, ...</td>\n",
+       "      <td>Despite the massive stimulus package the White...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>{'id': 'msnbc', 'name': 'MSNBC'}</td>\n",
+       "      <td>2020-03-23T20:44:17Z</td>\n",
+       "      <td>Democrats hold coronavirus stimulus over trans...</td>\n",
+       "      <td>https://www.msnbc.com/ali-velshi/watch/new-dat...</td>\n",
+       "      <td>[coronavirus, velshi, process, united, lack, v...</td>\n",
+       "      <td>MSNBC’s Ali Velshi discusses the lack of coron...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>{'id': 'msnbc', 'name': 'MSNBC'}</td>\n",
+       "      <td>2020-03-23T20:44:17Z</td>\n",
+       "      <td>Democrats hold coronavirus stimulus over trans...</td>\n",
+       "      <td>https://www.msnbc.com/the-beat-with-ari/watch/...</td>\n",
+       "      <td>[right, coronavirus, tony, project, rimoin, st...</td>\n",
+       "      <td>Many are grappling with additional stress and ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>95</td>\n",
+       "      <td>{'id': 'msnbc', 'name': 'MSNBC'}</td>\n",
+       "      <td>2020-03-23T20:44:17Z</td>\n",
+       "      <td>Democrats hold coronavirus stimulus over trans...</td>\n",
+       "      <td>https://www.msnbc.com/craig-melvin/watch/bethe...</td>\n",
+       "      <td>[frankel, coronavirus, bethenny, 17m, raises, ...</td>\n",
+       "      <td>Entrepreneur &amp; philanthropist Bethenny Frankel...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>96</td>\n",
+       "      <td>{'id': 'msnbc', 'name': 'MSNBC'}</td>\n",
+       "      <td>2020-03-23T20:44:17Z</td>\n",
+       "      <td>Democrats hold coronavirus stimulus over trans...</td>\n",
+       "      <td>https://www.msnbc.com/stephanie-ruhle/watch/ho...</td>\n",
+       "      <td>[coronavirus, rest, start, ruhle, francisco, j...</td>\n",
+       "      <td>San Francisco seemed to get a jump start again...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>97</td>\n",
+       "      <td>{'id': 'msnbc', 'name': 'MSNBC'}</td>\n",
+       "      <td>2020-03-23T20:44:17Z</td>\n",
+       "      <td>Democrats hold coronavirus stimulus over trans...</td>\n",
+       "      <td>https://www.msnbc.com/andrea-mitchell-reports/...</td>\n",
+       "      <td>[coronavirus, therapeutic, researchers, treatm...</td>\n",
+       "      <td>Dr. Joshua Sharfstein, Vice Dean for Public He...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>98</td>\n",
+       "      <td>{'id': 'msnbc', 'name': 'MSNBC'}</td>\n",
+       "      <td>2020-03-23T20:44:17Z</td>\n",
+       "      <td>Democrats hold coronavirus stimulus over trans...</td>\n",
+       "      <td>http://www.msnbc.com/morning-joe/watch/trump-c...</td>\n",
+       "      <td>[legal, coronavirus, action, trump, ad, threat...</td>\n",
+       "      <td>The president's re-election campaign is threat...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>99</td>\n",
+       "      <td>{'id': 'msnbc', 'name': 'MSNBC'}</td>\n",
+       "      <td>2020-03-23T20:44:17Z</td>\n",
+       "      <td>Democrats hold coronavirus stimulus over trans...</td>\n",
        "      <td>https://www.msnbc.com/msnbc/watch/democrats-ho...</td>\n",
+       "      <td>[coronavirus, haake, latest, republicans, stan...</td>\n",
+       "      <td>NBC's Garrett Haake brings the latest from Cap...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>100 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                             Source                  Date  \\\n",
-       "0  {'id': 'msnbc', 'name': 'MSNBC'}  2020-03-23T20:44:17Z   \n",
+       "                              Source                  Date  \\\n",
+       "0   {'id': 'msnbc', 'name': 'MSNBC'}  2020-03-23T20:44:17Z   \n",
+       "1   {'id': 'msnbc', 'name': 'MSNBC'}  2020-03-23T20:44:17Z   \n",
+       "2   {'id': 'msnbc', 'name': 'MSNBC'}  2020-03-23T20:44:17Z   \n",
+       "3   {'id': 'msnbc', 'name': 'MSNBC'}  2020-03-23T20:44:17Z   \n",
+       "4   {'id': 'msnbc', 'name': 'MSNBC'}  2020-03-23T20:44:17Z   \n",
+       "..                               ...                   ...   \n",
+       "95  {'id': 'msnbc', 'name': 'MSNBC'}  2020-03-23T20:44:17Z   \n",
+       "96  {'id': 'msnbc', 'name': 'MSNBC'}  2020-03-23T20:44:17Z   \n",
+       "97  {'id': 'msnbc', 'name': 'MSNBC'}  2020-03-23T20:44:17Z   \n",
+       "98  {'id': 'msnbc', 'name': 'MSNBC'}  2020-03-23T20:44:17Z   \n",
+       "99  {'id': 'msnbc', 'name': 'MSNBC'}  2020-03-23T20:44:17Z   \n",
        "\n",
-       "                                               Title  \\\n",
-       "0  Democrats hold coronavirus stimulus over trans...   \n",
+       "                                                Title  \\\n",
+       "0   Democrats hold coronavirus stimulus over trans...   \n",
+       "1   Democrats hold coronavirus stimulus over trans...   \n",
+       "2   Democrats hold coronavirus stimulus over trans...   \n",
+       "3   Democrats hold coronavirus stimulus over trans...   \n",
+       "4   Democrats hold coronavirus stimulus over trans...   \n",
+       "..                                                ...   \n",
+       "95  Democrats hold coronavirus stimulus over trans...   \n",
+       "96  Democrats hold coronavirus stimulus over trans...   \n",
+       "97  Democrats hold coronavirus stimulus over trans...   \n",
+       "98  Democrats hold coronavirus stimulus over trans...   \n",
+       "99  Democrats hold coronavirus stimulus over trans...   \n",
        "\n",
-       "                                                 URL  \n",
-       "0  https://www.msnbc.com/msnbc/watch/democrats-ho...  "
+       "                                                  URL  \\\n",
+       "0   https://www.msnbc.com/mtp-daily/watch/trump-co...   \n",
+       "1   https://www.msnbc.com/msnbc/watch/quarantined-...   \n",
+       "2   https://www.msnbc.com/stephanie-ruhle/watch/re...   \n",
+       "3   https://www.msnbc.com/ali-velshi/watch/new-dat...   \n",
+       "4   https://www.msnbc.com/the-beat-with-ari/watch/...   \n",
+       "..                                                ...   \n",
+       "95  https://www.msnbc.com/craig-melvin/watch/bethe...   \n",
+       "96  https://www.msnbc.com/stephanie-ruhle/watch/ho...   \n",
+       "97  https://www.msnbc.com/andrea-mitchell-reports/...   \n",
+       "98  http://www.msnbc.com/morning-joe/watch/trump-c...   \n",
+       "99  https://www.msnbc.com/msnbc/watch/democrats-ho...   \n",
+       "\n",
+       "                                             Keywords  \\\n",
+       "0   [conducted, coronavirus, governors, cuomo, for...   \n",
+       "1   [coronavirus, decision, miami, pandemic, hold,...   \n",
+       "2   [coronavirus, ruhle, ross, weighing, reeling, ...   \n",
+       "3   [coronavirus, velshi, process, united, lack, v...   \n",
+       "4   [right, coronavirus, tony, project, rimoin, st...   \n",
+       "..                                                ...   \n",
+       "95  [frankel, coronavirus, bethenny, 17m, raises, ...   \n",
+       "96  [coronavirus, rest, start, ruhle, francisco, j...   \n",
+       "97  [coronavirus, therapeutic, researchers, treatm...   \n",
+       "98  [legal, coronavirus, action, trump, ad, threat...   \n",
+       "99  [coronavirus, haake, latest, republicans, stan...   \n",
+       "\n",
+       "                                                 Text  \n",
+       "0   Cuomo: Governors are in charge because Trump p...  \n",
+       "1   Miami mayor Francis Suarez, who has tested pos...  \n",
+       "2   Despite the massive stimulus package the White...  \n",
+       "3   MSNBC’s Ali Velshi discusses the lack of coron...  \n",
+       "4   Many are grappling with additional stress and ...  \n",
+       "..                                                ...  \n",
+       "95  Entrepreneur & philanthropist Bethenny Frankel...  \n",
+       "96  San Francisco seemed to get a jump start again...  \n",
+       "97  Dr. Joshua Sharfstein, Vice Dean for Public He...  \n",
+       "98  The president's re-election campaign is threat...  \n",
+       "99  NBC's Garrett Haake brings the latest from Cap...  \n",
+       "\n",
+       "[100 rows x 6 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "article_df_content={'Source':[data['source']],'Date':[data['publishedAt']], 'Title':[data['title']], 'URL':[data['url']]}\n",
-    "article_df_content\n",
-    "article_df=pd.DataFrame(article_df_content)\n",
+    "article_df = pd.DataFrame(list(zip(source_list, date_list, title_list, urls_list, key_words_list, text_list)), \n",
+    "               columns =['Source', 'Date', 'Title','URL','Keywords','Text']) \n",
     "article_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Source,Date,Title,URL\\n\"{\\'id\\': \\'msnbc\\', \\'name\\': \\'MSNBC\\'}\",2020-03-23T20:44:17Z,Democrats hold coronavirus stimulus over transparency and local funding,https://www.msnbc.com/msnbc/watch/democrats-hold-coronavirus-stimulus-over-transparency-and-local-funding-81110597798\\n'"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "article_df.to_csv(index=False)"
+    "article_df.to_csv(r'COVID-news\\msnbc.csv',index=False)"
    ]
   },
   {
