event registry, Bing News

--- a/COVID-news/NLP_clean.ipynb
+++ b/COVID-news/NLP_clean.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -41,68 +43,6 @@
     "from PIL import Image\n",
     "from wordcloud import WordCloud, STOPWORDS, ImageColorGenerator\n",
     "from textblob import TextBlob\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (<ipython-input-84-75f972ee3c46>, line 44)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-84-75f972ee3c46>\"\u001b[0;36m, line \u001b[0;32m44\u001b[0m\n\u001b[0;31m    print(\"Url: %s. Title: %s. Published Date:%s.\" % (url, title, datePublished))\";\u001b[0m\n\u001b[0m                                                                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Replace the following string value with your valid X-RapidAPI-Key.\n",
-    "Your_X_RapidAPI_Key = \"b9297b332bmshd145b94c59505f0p1a438cjsn3dc7ab324c32\";\n",
-    "\n",
-    "# The query parameters: (update according to your search query)\n",
-    "q = \"Coronavirus\"  # the search query\n",
-    "pageNumber = 1  # the number of requested page\n",
-    "pageSize = 10  # the size of a page\n",
-    "autoCorrect = True  # autoCorrectspelling\n",
-    "safeSearch = False  # filter results for adult content\n",
-    "\n",
-    "response = requests.get(\n",
-    "    \"https://contextualwebsearch-websearch-v1.p.rapidapi.com/api/Search/NewsSearchAPI?q={}&pageNumber={}&pageSize={}&autocorrect={}&safeSearch={}\".format(\n",
-    "        q, pageNumber, pageSize, autoCorrect, safeSearch),\n",
-    "    headers={\n",
-    "        \"X-RapidAPI-Key\": 'b9297b332bmshd145b94c59505f0p1a438cjsn3dc7ab324c32'\n",
-    "    }\n",
-    ").json()\n",
-    "\n",
-    "# Get the numer of items returned\n",
-    "totalCount = response[\"totalCount\"];\n",
-    "\n",
-    "# Get the list of most frequent searches related to the input search query\n",
-    "relatedSearch = response[\"relatedSearch\"]\n",
-    "\n",
-    "# Go over each resulting item\n",
-    "for webPage in response[\"value\"]:\n",
-    "    # Get the web page metadata\n",
-    "    url = webPage[\"url\"]\n",
-    "    title = webPage[\"title\"]\n",
-    "    description = webPage[\"description\"]\n",
-    "    keywords = webPage[\"keywords\"]\n",
-    "    provider = webPage[\"provider\"][\"name\"]\n",
-    "    datePublished = webPage[\"datePublished\"]\n",
-    "\n",
-    "    # Get the web page image (if exists)\n",
-    "    imageUrl = webPage[\"image\"][\"url\"]\n",
-    "    imageHeight = webPage[\"image\"][\"height\"]\n",
-    "    imageWidth = webPage[\"image\"][\"width\"]\n",
-    "\n",
-    "    thumbnail = webPage[\"image\"][\"thumbnail\"]\n",
-    "    thumbnailHeight = webPage[\"image\"][\"thumbna`enter code here`ilHeight\"]\n",
-    "\n",
-    "# An example: Output the webpage url, title and published date:\n",
-    "print(\"Url: %s. Title: %s. Published Date:%s.\" % (url, title, datePublished))\";\n",
-    "\n"
    ]
   },
   {
