--- a/COVID-news/NLP_clean.ipynb
+++ b/COVID-news/NLP_clean.ipynb
@@ -3399,6 +3399,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "newspaper.article.Article"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(art)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 79,
    "metadata": {},
    "outputs": [
